# mlops-streamlit-ui

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  auth_config.yaml  docker-compose.yaml  main.py  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: app-cd-test.yml  app-tests.yml  ci-cd.yml  ci.yml  mlops-cd.yml  mlops-ci.yml  publish.yml
.streamlit/: config.toml
app/: Dockerfile  Dockerfile-Streamlit-App  app.py  backend.py  constants.py  get_features.py  pyproject.toml  reloader.py  requirements.txt  schemas.py  ui.py  user_input.py
app/tests/: test_user_input.py
streamlit-app/: form.py  test.py
streamlit-app/.streamlit/: config.toml
tests/: test_user_input.py
tests/app/: test_user_input.py
tests/streamlit-app/: test_form.py
