[tool.poetry]
name = "fhswf-mlops-project"
version = "0.1.0"
description = ""
authors = ["VitaliKStud <vitali9394@yahoo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
