[tool.poetry]
name = "docker-container-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.42.2"
streamlit-authenticator = "^0.4.1"
loguru = "^0.7.3"
pydantic = "^2.10.6"
pandas = "^2.2.3"
requests = "^2.32.3"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.1.0"
coverage-badge = "^1.1.2"
pyright = "^1.1.394"
ruff = "^0.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
