[tool.poetry]
name = "fhswf-mlops-project"
version = "0.1.0"
description = ""
authors = ["VitaliKStud"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.0"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
