[tool.poetry]
name = "fhswf-mlops-project"
version = "0.1.0"
description = ""
authors = ["VitaliKStud"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.0"
pytest = "^8.3.4"
ruff = "^0.9.6"
pyright = "^1.1.394"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
